@@ -146,6 +146,7 @@ Known values for OPTION are:
   [--validity_days=days]
   [--capath=ca_path_dir]
   [--certdir=certdir]
+  [--update-certs]
 
   add-boot       - Add startup scripts for IndiMail to get started during boot
   rm-boot        - Remove Startup scripts to prevent IndiMail to get started after boot
@@ -159,6 +160,7 @@ Known values for OPTION are:
   days           - Number of days for which the Certificate should be valid
   ca_path_dir    - Directory having CA certificate
   certdir        - Directory in which new certificates will be placed
+  update-certs   - Update CERTDIR, CERTFILE and TLSCACHE for services using them
 
 --check-certs=[full path of certificate]
   Check certificate given as argument or
