@@ -1,3 +1,10 @@
+* XXX XXX XX XXXX XX:XX:XX +0000 @email@ @version@-@release@%{?dist}
+Release @version@-@release@ Start 05/02/2024 End XX/XX/XXXX
+- 05/02/2024
+01. minisvc: mount /etc/indimail/resolv.conf when UNSHARE is set
+02. minisvc: updated create_cert function - synced with svctool
+03. minisvc: added --update-certs option from svctool
+
 * Sun Mar 03 2024 12:20:15 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.4-1.1%{?dist}
 Release 1.1.4-1.1 Start 09/02/2024 End 03/02/2024
 - 09/02/2024
